force-app/main/default/objects/Mediator__c/Mediator__c.object-meta.xml
<CustomObject>
    <label>Intermediador</label>
    <nameField>
        <label>Intermediador Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intermediadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>