force-app/main/default/objects/Mediator__c/fields/AccountAdress__c.field-meta.xml
<CustomField>
    <fullName>AccountAdress__c</fullName>
    <description>O endereço da conta é necessário para fins de correspondência.</description>
    <label>Endereço da conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>endereço da conta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>