force-app/main/default/objects/Mediator__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>O CEP da conta é necessário para fins de correspondência.</description>
    <inlineHelpText>O CEP deve estar no formato: 12345-678</inlineHelpText>
    <label>CEP</label>
    <length>9</length>
    <type>Text</type>
</CustomField>