force-app/main/default/objects/Mediator__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>A cidade da conta é necessária para fins de correspondência.</description>
    <label>Cidade</label>
    <length>150</length>
    <type>Text</type>
</CustomField>