force-app/main/default/objects/Mediator__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ da empresa</description>
    <label>CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>