force-app/main/default/objects/Mediator__c/fields/CompanySize__c.field-meta.xml
<CustomField>
    <fullName>CompanySize__c</fullName>
    <description>O tamanho da conta é uma estimativa do tamanho da empresa.</description>
    <label>Tamanho da conta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>