force-app/main/default/objects/Mediator__c/fields/CorporateName__c.field-meta.xml
<CustomField>
    <fullName>CorporateName__c</fullName>
    <description>Razão social da empresa</description>
    <label>Razão social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>