force-app/main/default/objects/Mediator__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>O país da conta é necessário para fins de correspondência.</description>
    <label>País</label>
    <length>150</length>
    <type>Text</type>
</CustomField>