force-app/main/default/objects/Mediator__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>O estado da conta é necessário para fins de correspondência.</description>
    <label>Estado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>