force-app/main/default/objects/Mediator__c/fields/MediatorType__c.field-meta.xml
<CustomField>
    <fullName>MediatorType__c</fullName>
    <description>Qual é o tipo de intermediário</description>
    <label>Tipo de intermediador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Assinante Aceleraí Agências</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>