force-app/main/default/objects/Mediator__c/fields/SubscriptionType_AceleraiAgencias__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionType_AceleraiAgencias__c</fullName>
    <label>Tipo de plano do Aceleraí Agências</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plano 1</fullName>
            </value>
            <value>
                <fullName>Plano 2</fullName>
            </value>
            <value>
                <fullName>Plano 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>