force-app/main/default/objects/Mediator__c/fields/TradeName__c.field-meta.xml
<CustomField>
    <fullName>TradeName__c</fullName>
    <description>Nome fantasia da empresa</description>
    <label>Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>